--- a/style.css
+++ b/style.css
@@ -69,3 +69,8 @@ fieldset.grupo .campo{
 .botao, select, label.checkbox{
     cursor: pointer;
 }
+h1{
+    text-align: center;
+    font-family: 'Roboto Slab', serif;
+    font-size: 2.5em;
+}
